front-end edits

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="carousel">
+<div class="bg">
+<div class="container">
     <ngb-carousel>
         <ng-template ngbSlide>
             <img src="https://jq4i42xkvxi1pmiu513c24lx-wpengine.netdna-ssl.com/wp-content/uploads/2019/06/secondary-1024x307.jpg"
@@ -49,16 +50,17 @@
                 <h1 class="womencollection" style="text-align: center;">Women Collection</h1>
             </div>
             <div class="col-sm-12">
-                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img18/apparel/WRS2018/WA/vday/3VDAY-PC-1024x300._CB455114849_.jpg" width="100%">
+                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img18/apparel/WRS2018/WA/vday/3VDAY-PC-1024x300._CB455114849_.jpg"
+                    width="100%">
             </div>
             <br>
             <div class="card-deck">
                 <div class="card col-sm-6">
-                    <img src="https://i.pinimg.com/originals/71/0d/e8/710de85b0df37682718c36acb6a5b0bc.jpg" height="500px">
+                    <img src="https://i.pinimg.com/originals/71/0d/e8/710de85b0df37682718c36acb6a5b0bc.jpg"
+                        height="500px">
                 </div>
                 <div class="card col-sm-6">
-                    <img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24223636.jpg"
-                        height="500px">
+                    <img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24223636.jpg" height="500px">
                 </div>
             </div>
         </div>
@@ -66,5 +68,6 @@
 </div>
 <div class="spacer">
 
+</div>
 </div>
 <app-footer></app-footer>
