front-end edits

--- a/src/app/women/women.component.css
+++ b/src/app/women/women.component.css
@@ -6,4 +6,13 @@
 h3{
     font-family: 'Dancing Script', cursive;
     color:  rgb(155, 23, 148);
+    
+}
+h5{
+
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Lobster', cursive;   
+    font-size: 2em;
+    color: olive;
+    
 }
