--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -44,7 +44,7 @@
             <a class="dropdown-item" id="dropdown-item" routerLink="blouses"
               >Blouses</a
             >
-            <a class="dropdown-item" id="dropdown-item" routerLink="bottomwear"
+            <a class="dropdown-item" id="dropdown-item" routerLink="bottoms"
               >Bottoms</a
             >
             <a
