few changes on bg

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,70 +1,73 @@
-<div class="carousel">
-    <ngb-carousel>
-        <ng-template ngbSlide>
-            <img src="https://jq4i42xkvxi1pmiu513c24lx-wpengine.netdna-ssl.com/wp-content/uploads/2019/06/secondary-1024x307.jpg"
-                width="100%">
-        </ng-template>
-        <ng-template ngbSlide>
-            <img src="https://bahaduronlineshoppingbazar.com/wp-content/uploads/2020/03/MAX-Banner1-desktop-Men-27Feb2020-2000-x-600-1024x307-1.jpg"
-                width="100%">
-        </ng-template>
-
-        <ng-template ngbSlide>
-            <img src="https://www.26mrkt.com/wp-content/uploads/2018/02/4_WAYS_INCREASE_CONVERSION_RATE.jpg"
-                width="100%">
-        </ng-template>
-
-
-    </ngb-carousel>
-
-</div>
-<br>
-<br>
-<div class="container">
-    <div class="card-deck">
-        <div class="mens-wear">
-            <div class="mencollection">
-                <h1 class="mencollection" style="text-align: center;">Men Collection</h1>
-            </div>
-            <div class="col-sm-12">
-                <img src="https://updatedyou.com/wp-content/uploads/2018/10/mens.jpg" width="100%">
-            </div>
-            <br>
-            <div class="card-deck">
-                <div class="card col-sm-6">
-                    <img src="https://i.pinimg.com/564x/c5/b7/5e/c5b75e3eeec8c0e69216f19fb146ffec.jpg" height="500px">
+<div class="bg">
+    <div class="container">
+        <ngb-carousel>
+            <ng-template ngbSlide>
+                <img src="https://jq4i42xkvxi1pmiu513c24lx-wpengine.netdna-ssl.com/wp-content/uploads/2019/06/secondary-1024x307.jpg"
+                    width="100%">
+            </ng-template>
+            <ng-template ngbSlide>
+                <img src="https://bahaduronlineshoppingbazar.com/wp-content/uploads/2020/03/MAX-Banner1-desktop-Men-27Feb2020-2000-x-600-1024x307-1.jpg"
+                    width="100%">
+            </ng-template>
+    
+            <ng-template ngbSlide>
+                <img src="https://www.26mrkt.com/wp-content/uploads/2018/02/4_WAYS_INCREASE_CONVERSION_RATE.jpg"
+                    width="100%">
+            </ng-template>
+    
+    
+        </ngb-carousel>
+    
+    </div>
+    <br>
+    <br>
+    <div class="container">
+        <div class="card-deck">
+            <div class="mens-wear">
+                <div class="mencollection">
+                    <h1 class="mencollection" style="text-align: center;">Men Collection</h1>
                 </div>
-                <div class="card col-sm-6">
-                    <img src="https://image.freepik.com/free-vector/fashion-man-accessories-collection_1284-16522.jpg"
-                        height="500px">
+                <div class="col-sm-12">
+                    <img src="https://updatedyou.com/wp-content/uploads/2018/10/mens.jpg" width="100%">
+                </div>
+                <br>
+                <div class="card-deck">
+                    <div class="card col-sm-6">
+                        <img src="https://i.pinimg.com/564x/c5/b7/5e/c5b75e3eeec8c0e69216f19fb146ffec.jpg" height="500px">
+                    </div>
+                    <div class="card col-sm-6">
+                        <img src="https://image.freepik.com/free-vector/fashion-man-accessories-collection_1284-16522.jpg"
+                            height="500px">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="card-deck">
+            <div class="womens-wear">
+                <div class="womencollection">
+                    <h1 class="womencollection" style="text-align: center;">Women Collection</h1>
+                </div>
+                <div class="col-sm-12">
+                    <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img18/apparel/WRS2018/WA/vday/3VDAY-PC-1024x300._CB455114849_.jpg"
+                        width="100%">
+                </div>
+                <br>
+                <div class="card-deck">
+                    <div class="card col-sm-6">
+                        <img src="https://i.pinimg.com/originals/71/0d/e8/710de85b0df37682718c36acb6a5b0bc.jpg"
+                            height="500px">
+                    </div>
+                    <div class="card col-sm-6">
+                        <img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24223636.jpg" height="500px">
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <br>
-    <br>
-    <div class="card-deck">
-        <div class="womens-wear">
-            <div class="womencollection">
-                <h1 class="womencollection" style="text-align: center;">Women Collection</h1>
-            </div>
-            <div class="col-sm-12">
-                <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img18/apparel/WRS2018/WA/vday/3VDAY-PC-1024x300._CB455114849_.jpg" width="100%">
-            </div>
-            <br>
-            <div class="card-deck">
-                <div class="card col-sm-6">
-                    <img src="https://i.pinimg.com/originals/71/0d/e8/710de85b0df37682718c36acb6a5b0bc.jpg" height="500px">
-                </div>
-                <div class="card col-sm-6">
-                    <img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24223636.jpg"
-                        height="500px">
-                </div>
-            </div>
-        </div>
+    <div class="spacer">
+    
     </div>
-</div>
-<div class="spacer">
-
-</div>
-<app-footer></app-footer>
+    </div>
+    <app-footer></app-footer>
