--- a/src/app/men/men.component.html
+++ b/src/app/men/men.component.html
@@ -1,3 +1,4 @@
+<div class="bg">
 <ngb-carousel>
     <ng-template ngbSlide>
         <img src="https://www.macleans.ca/wp-content/uploads/2016/10/MAC43_MENINTIGHTS_CAROUSEL.jpg"
@@ -100,7 +101,7 @@
     </div>
     </div>
 </div>
-
+</div>
 <div><br><br><br></div>
 
 <app-footer></app-footer>
