--- a/src/app/women/women.component.css
+++ b/src/app/women/women.component.css
@@ -1,12 +1,11 @@
-
 .container-fluid{
     width:100%;
     height: 100%;
-    background:#F5F5F5;;
+    background: #ffcdd2;
 }
 h3{
     font-family: 'Dancing Script', cursive;
-    color:  #FC5185;
+    color:  rgb(155, 23, 148);
     
 }
 h5{
