--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,15 +1,54 @@
-<div class="bg">
-    <div class="padding container d-flex justify-content-center ">
-        <div class="col-md-5 col-md-offset-1">
-            <form class="signup-form" method="POST">
-                <h2 class="text-center">SIGNUP NOW</h2>
-                <hr>
-                <div class="form-group"> <input type="text" name="fullname" class="form-control" placeholder="Full Name" required="required" ngModel> </div>
-                <div class="form-group"> <input type="email" name="email" class="form-control" placeholder="Email Address" required="required" ngModel> </div>
-                <div class="form-group"> <input type="text" name="username" class="form-control" placeholder="User Name" required="required" ngModel> </div>
-                <div class="form-group"> <input type="text" name="password" class="form-control" placeholder="Password" required="required" ngModel> </div>
-                <div class="form-group text-center"> <button type="submit" class="btn btn-blue btn-block">Register</button> </div>
-            </form>
+<div class=" container jumbotron">
+    <form name="myform" class="form-group" style="text-align: center;">
+        <h3>Create your Account</h3>
+        <div class="row">
+            <div class="col-md-3">
+
+            </div>
+            <div class=" col-md-6">
+                <label for="pwd"></label>
+                <input type="text" class="form-control" placeholder="First name">
+            </div>
         </div>
-    </div>
+        <div class="row"> 
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-6">
+                <label for="pwd"></label>
+                <input type="text" class="form-control" placeholder="Last name">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-6">
+                <label for="pwd"></label>
+                <input type="text" class="form-control" placeholder="Email">
+            </div>
+        </div>
+        <div class="row"> 
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-6">
+                <label for="pwd"></label>
+                <input type="password" class="form-control" placeholder="Password">
+            </div>
+        </div>
+        <div class="row"> 
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-6">
+                <label for="pwd"></label>
+                <button type="submit" class="btn btn-blue btn-block">Sign Up</button> <br>
+                <h6 style="text-align: center;">Already Registered? <a href="#">Login!</a></h6>
+               
+            </div>
+        </div>
+
+        
+    </form>
 </div>
