--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,37 @@
-<div class="bg">
-    <div class="padding container d-flex justify-content-center ">
-        <div class="col-md-5 col-md-offset-1">
-            <form   class="login-form">
-                <h2 class="text-center">Login</h2>
-                <hr>
-                <div class="form-group"> <input type="email" name="email" class="form-control" placeholder="Email Address" required="required" ngModel> </div>
-                <div class="form-group"> <input type="text" name="password" class="form-control" placeholder="Password" required="required" ngModel> </div>
-                <div class="form-group text-center"> <button type="submit" class="btn btn-blue btn-block">Login</button> </div>
-            </form>
+<div class=" container jumbotron">
+    <form name="myform" class="form-group" style="text-align: center;">
+        <h3>Login</h3>
+      
+        <div class="row">
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-6">
+                <label for="pwd"></label>
+                <input type="text" class="form-control" placeholder="Email">
+            </div>
         </div>
-    </div>
+        <div class="row"> 
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-6">
+                <label for="pwd"></label>
+                <input type="password" class="form-control" placeholder="Password">
+            </div>
+        </div>
+        <div class="row"> 
+            <div class="col-md-3">
+
+            </div>
+            <div class="col-md-6">
+                <label for="pwd"></label>
+                <button type="submit" class="btn btn-blue btn-block">Login</button> <br>
+                <h6 style="text-align: center;">Forgot Password?<a href="#">Click here</a></h6>
+               
+            </div>
+        </div>
+
+        
+    </form>
 </div>
