--- a/src/app/traditional/traditional.component.html
+++ b/src/app/traditional/traditional.component.html
@@ -1,17 +1,24 @@
-
 <div class="container">
     <div class="card-deck">
         <div *ngFor="let bw of traditionalwear ;let i=index" class="card mb-5" style="min-width: 18rem;">
             <img src="{{bw.front}}" class="card-img-top">
             <img src="{{bw.back}}" class="img-top">
             <div class="card-body">
-                <h3 data-toggle="tooltip"  title="{{bw.name|lowercase}}">
-                    {{(bw.name.length>14)?(bw.name | slice:0:12)+'..':(bw.name)}}
-                </h3>
-                <p style="float: left; " class="card-text"><b> &#x20b9;{{bw.price}}/-</b></p>
-                <i style="float:right"class="fas fa-heart"></i>
+                <h4 style="font-family: 'Lato', sans-serif;" data-toggle="tooltip" title="{{bw.name|lowercase}}">
+                    {{(bw.name.length>18)?(bw.name | slice:0:16)+'..':(bw.name)}}
+                </h4>
+                <h6 style="text-align: center;color:yellowgreen">
+                   <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </h6>
+                <small><s> &#x20b9;{{bw.price+300}}/-</s></small>
+                <span  class="card-text"><b> &#x20b9;{{bw.price}}/-</b></span>
+            <i class="far fa-heart" style="float:right"></i>    
             </div>
-            <button style="width: 100%;" class="btn btn-success" (click)="addItem(i)">Add to Cart</button>
-        </div>
+            <button style="width: 100%;" class="btn btn-warning" (click)="addItem(i)">Add to Cart &nbsp;<i class="fas fa-shopping-cart"></i></button>
+      </div>
     </div>
 </div>
