--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,140 +2,78 @@
   <p style="padding-top: 2%; padding-bottom: 2%;">Best Fashion Friend</p>
 </div>
 <div class="container">
+  
   <nav class="navbar navbar-expand-lg navbar-light">
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" routerLink=""
-            >Home <span class="sr-only">(current)</span></a
-          >
+          <a class="nav-link" routerLink="" data-toggle="collapse" data-target=".navbar-collapse.show" >Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" routerLink="">AboutUs</a>
+          <a class="nav-link" data-toggle="collapse" routerLink="">AboutUs</a>
         </li>
         <li class="nav-item dropdown" id="dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            routerLink="women"
-            id="navbarDropdown"
-            role="button"
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >
+          <a class="nav-link dropdown-toggle" routerLink="women" id="navbarDropdown" role="button"
+            data-toggle="dropdown"   aria-haspopup="true" aria-expanded="false">
             Women
           </a>
-          <div
-            class="dropdown-menu"
-            aria-labelledby="navbarDropdown"
-            id="dropdown-menu"
-          >
-            <a class="dropdown-item" id="dropdown-item" routerLink="blouses"
-              >Blouses</a
-            >
-            <a class="dropdown-item" id="dropdown-item" routerLink="bottomwear"
-              >Bottoms</a
-            >
-            <a
-              class="dropdown-item"
-              id="dropdown-item"
-              routerLink="traditionalwear"
-              >Ethnic Wear</a
-            >
-            <a
-              class="dropdown-item"
-              id="dropdown-item"
-              routerLink="traditionalwear"
-              >Traditional Wear</a
-            >
-            <a
-              class="dropdown-item"
-              id="dropdown-item"
-              routerLink="womenaccessories"
-              >Accessories</a
-            >
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown" id="dropdown-menu">
+            <a class="dropdown-item" id="dropdown-item" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="blouses">Blouses</a>
+            <a class="dropdown-item" id="dropdown-item" data-toggle="collapse" data-target=".navbar-collapse.show"routerLink="bottomwear">Bottoms</a>
+            <a class="dropdown-item" id="dropdown-item" data-toggle="collapse" data-target=".navbar-collapse.show"routerLink="traditionalwear">Ethnic Wear</a>
+            <a class="dropdown-item" id="dropdown-item" data-toggle="collapse" data-target=".navbar-collapse.show"routerLink="traditionalwear">Traditional Wear</a>
+            <a class="dropdown-item" id="dropdown-item" data-toggle="collapse" data-target=".navbar-collapse.show"routerLink="womenaccessories">Accessories</a>
           </div>
         </li>
         <li class="nav-item dropdown" id="dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            routerLink="men"
-            id="navbarDropdown"
-            role="button"
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >
+          <a class="nav-link dropdown-toggle" routerLink="men" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
             Men
           </a>
-          <div
-            class="dropdown-menu"
-            id="dropdown-menu"
-            aria-labelledby="navbarDropdown"
-          >
-            <a class="dropdown-item" id="dropdown-item" routerLink="shorts"
-              >Shorts</a
-            >
-            <a class="dropdown-item" id="dropdown-item" routerLink="bottoms"
-              >Bottoms</a
-            >
-            <a class="dropdown-item" id="dropdown-item" routerLink="jackets"
-              >Jackets</a
-            >
-            <a class="dropdown-item" id="dropdown-item" routerLink="tshirts"
-              >T-shirts</a
-            >
-            <a
-              class="dropdown-item"
-              id="dropdown-item"
-              routerLink="menaccessories"
-              >Accessories</a
-            >
+          <div class="dropdown-menu" id="dropdown-menu" data-toggle="collapse" data-target=".navbar-collapse.show"   aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" id="dropdown-item" data-toggle="collapse"data-target=".navbar-collapse.show"   routerLink="shorts">Shorts</a>
+            <a class="dropdown-item" id="dropdown-item" data-toggle="collapse"data-target=".navbar-collapse.show"  routerLink="bottoms">Bottoms</a>
+            <a class="dropdown-item" id="dropdown-item" data-toggle="collapse"data-target=".navbar-collapse.show"  routerLink="jackets">Jackets</a>
+            <a class="dropdown-item" id="dropdown-item" data-toggle="collapse"data-target=".navbar-collapse.show"  routerLink="tshirts">T-shirts</a>
+            <a class="dropdown-item" id="dropdown-item" data-toggle="collapse"data-target=".navbar-collapse.show"  routerLink="menaccessories">Accessories</a>
           </div>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto nav-flex-icons">
         <li class="nav-item">
-          <a class="nav-link" routerLink="whishlist">
+          <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"  routerLink="whishlist">
             <i class="fas fa-heart"></i>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="cart">
+          <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"  routerLink="cart">
             <i class="fas fa-shopping-bag"></i>
           </a>
         </li>
         <li class="nav-item dropdown" id="nav-link">
-          <a *ngIf="!authservice.isAuthenticated" class="nav-link" >
+          <a *ngIf="!authservice.isAuthenticated"  class="nav-link">
             <i class="fas fa-user"></i>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" *ngIf="!authservice.isAuthenticated" routerLink="signup">SIGN UP</a>
-            <a class="dropdown-item" *ngIf="!authservice.isAuthenticated"  routerLink="login">LOGIN</a>
+            <a class="dropdown-item" *ngIf="!authservice.isAuthenticated" data-toggle="collapse" data-target=".navbar-collapse.show"routerLink="signup">SIGN UP</a>
+            <a class="dropdown-item" *ngIf="!authservice.isAuthenticated" data-toggle="collapse" data-target=".navbar-collapse.show"routerLink="login">LOGIN</a>
           </div>
         </li>
-      
-           <li  class="nav-item dropdown" id="nav-link">
-          <a  *ngIf="authservice.isAuthenticated"class="nav-link" >
-            <img src="../../favicon.ico" style="border-radius: 50%;" height="30" width="30" >
+
+        <li class="nav-item dropdown" id="nav-link">
+          <a *ngIf="authservice.isAuthenticated" class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" >
+            <img src="../../favicon.ico" style="border-radius: 50%;" height="30" width="30">
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item"  *ngIf="authservice.isAuthenticated" routerLink="profile">Profile</a>
-            <a class="dropdown-item" *ngIf="authservice.isAuthenticated" (click)="authservice.logout()"  >Logout</a>
+            <a class="dropdown-item" *ngIf="authservice.isAuthenticated" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="profile">Profile</a>
+            <a class="dropdown-item" *ngIf="authservice.isAuthenticated" data-toggle="collapse" data-target=".navbar-collapse.show" (click)="authservice.logout()">Logout</a>
           </div>
         </li>
-      
+
       </ul>
     </div>
   </nav>
