--- a/src/app/men/men.component.html
+++ b/src/app/men/men.component.html
@@ -10,10 +10,6 @@
     </ng-template>
 
     <ng-template ngbSlide>
-        <img src="https://assets.trendygolf.com/public/spree/carousel_images/273/large/banner-bear_Carousel.jpg?1580948566"
-            height="600px" width="100%">
-    </ng-template>
-    <ng-template ngbSlide>
         <img src="https://static1.fashionbeans.com/wp-content/uploads/2018/06/golfways-top-3.jpg"
             height="600px" width="100%">
     </ng-template>
@@ -31,7 +27,7 @@
             <img class="card-img-top" src="https://assets.myntassets.com/h_1440,q_90,w_1080/v1/assets/images/7758467/2019/8/14/61eb3165-2d77-451e-b449-8f16ab933df81565762843828-FAST-HIKE-HYBRID-JACKET---AP-61565762842662-1.jpg" alt="Card image cap">
             
             <div class="card-img-overlay">
-                <h5 class = "text-left font-weight-bold text-white">Jackets</h5>
+                <h5 class = "text-left font-weight-bold text-white font">Jackets</h5>
             </div>
             </a>
         
@@ -41,7 +37,7 @@
         <img class="card-img-top" src="https://assets.myntassets.com/h_1440,q_90,w_1080/v1/assets/images/11359222/2020/2/25/adf2362e-7070-4f19-9260-bd0b6f27eb6b1582622746353-WROGN-Men-Jeans-1201582622744184-2.jpg" alt="Card image cap">
         
         <div class="card-img-overlay">
-            <h5 class = "text-left font-weight-bold text-white">Bottoms</h5>
+            <h5 class = "text-left font-weight-bold text-white font">Bottoms</h5>
         </div>
         </a>
     
@@ -54,7 +50,7 @@
                 <img class="card-img-top" src="https://assets.myntassets.com/h_1440,q_90,w_1080/v1/assets/images/11446338/2020/2/25/60306cb9-edf2-48ac-a49a-2bdb439ab3531582610886463-Nike-Men-Shorts-1291582610884156-1.jpg" alt="Card image cap">
                 
                 <div class="card-img-overlay">
-                    <h3 class = "text-left font-weight-bold text-white">Shorts </h3>
+                    <h3 class = "text-left font-weight-bold text-white font">Shorts </h3>
                     
                 </div>
                 </a>
@@ -66,7 +62,7 @@
                     <img class="card-img-top" src="https://assets.myntassets.com/h_1440,q_90,w_1080/v1/assets/images/11363792/2020/2/24/f4a4d379-1aa8-4d69-8552-573ba2d574521582537735163-WROGN-Men-Tshirts-2981582537733914-1.jpg" alt="Card image cap">
                     
                     <div class="card-img-overlay">
-                        <h5 class = "text-left font-weight-bold text-white">T-Shirts</h5>
+                        <h5 class = "text-left font-weight-bold text-white font">T-Shirts</h5>
                         
                     </div>
                     </a>
@@ -77,7 +73,7 @@
                     <img class="card-img-top" src="https://assets.myntassets.com/h_1440,q_90,w_1080/v1/assets/images/2297662/2019/6/19/9e365a1c-a024-4bf0-8f15-22f6fca235dc1560928397148-HRX-by-Hrithik-Roshan-Men-Grey--Black-Colourblocked-City-Wal-1.jpg" alt="Card image cap">
                     
                     <div class="card-img-overlay">
-                        <h3 class = "text-left font-weight-bold text-white">Accessories</h3>
+                        <h3 class = "text-left font-weight-bold text-white font">Accessories</h3>
                     </div>
                     </a>
                 
@@ -85,7 +81,7 @@
     </div>
 </div>
 <div><br><br></div>
-<div class="container">
+<!--<div class="container">
     <div class="card-deck">
         
         <div class="card">
@@ -102,6 +98,7 @@
     </div>
 </div>
 </div>
+-->
 <div><br><br><br></div>
 
 <app-footer></app-footer>
