--- a/src/app/women/women.component.css
+++ b/src/app/women/women.component.css
@@ -1,11 +1,11 @@
 .container-fluid{
     width:100%;
     height: 100%;
-    background: #ffcdd2;
+    background: white;
 }
 h3{
     font-family: 'Dancing Script', cursive;
-    color:  rgb(155, 23, 148);
+    color: white;
     
 }
 h5{
@@ -15,4 +15,7 @@ h5{
     font-size: 2em;
     color: olive;
     
+}
+.font{
+    font-size: large;
 }
