--- a/src/app/women/women.component.html
+++ b/src/app/women/women.component.html
@@ -31,7 +31,7 @@
                 <img class="card-img-top" src="https://assets.myntassets.com/h_1440,q_90,w_1080/v1/assets/images/11557214/2020/3/9/ec6e62cd-04d5-4e2c-bbcf-9a29016302031583754744714-HERENOW-Women-Tops-7421583754742769-1.jpg" alt="Card image cap">
                 
                 <div class="card-img-overlay">
-                    <h3 class = "text-left font-weight-bold">Blouses</h3>
+                    <h3 class = "text-left font-weight-bold font">Blouses</h3>
                 </div>
                 </a>
             
@@ -41,7 +41,7 @@
             <img class="card-img-top" src="https://assets.myntassets.com/h_1440,q_90,w_1080/v1/assets/images/9625893/2019/7/2/f7ced658-074a-4ab4-99a4-b39c3bab54cc1562069729867-Roadster-Women-Black-Skinny-Fit-Mid-Rise-Clean-Look-Stretcha-1.jpg" alt="Card image cap">
             
             <div class="card-img-overlay">
-                <h3 class = "text-left font-weight-bold">Bottoms</h3>
+                <h3 class = "text-left font-weight-bold font">Bottoms</h3>
             </div>
             </a>
         
@@ -54,7 +54,7 @@
                     <img class="card-img-top" src="https://assets.myntassets.com/h_1440,q_90,w_1080/v1/assets/images/10942392/2019/11/19/79f3d4a1-bbf3-442b-b7de-83573ebb99851574150523536-Anubhutee-Women-Kurta-Sets-1381574150520307-1.jpg" alt="Card image cap">
                     
                     <div class="card-img-overlay">
-                        <h3 class = "text-left font-weight-bold ">Ethnic</h3>
+                        <h3 class = "text-left font-weight-bold font">Ethnic</h3>
                         
                     </div>
                     </a>
@@ -66,7 +66,7 @@
                         <img class="card-img-top" src="https://assets.myntassets.com/h_1440,q_90,w_1080/v1/assets/images/10436378/2019/8/20/715b2f0f-8b31-4491-b6f9-7519959b90401566289357655-Yellow-self-designed-Lehenga-with-Choli-with-net-dupatta-353-1.jpg" alt="Card image cap">
                         
                         <div class="card-img-overlay">
-                            <h3 class = " align-bottom font-weight-bold ">Traditional</h3>
+                            <h3 class = " align-bottom font-weight-bold font">Traditional</h3>
                             
                         </div>
                         </a>
@@ -77,7 +77,7 @@
                         <img class="card-img-top" src="https://assets.myntassets.com/h_1440,q_90,w_1080/v1/assets/images/10499092/2019/9/16/36096ab6-5ae5-41a7-a412-932a3bf6336c1568635796850-Rubans-Women-Rose-Gold-Plated-Pink-CZ-Stone--Pearl-Handcraft-1.jpg" alt="Card image cap">
                         
                         <div class="card-img-overlay">
-                            <h3 class = "text-left font-weight-bold">Accessories</h3>
+                            <h3 class = "text-left font-weight-bold font">Accessories</h3>
                         </div>
                         </a>
                     
@@ -85,7 +85,7 @@
         </div>
     </div>
     <div><br><br></div>
-    <div class="container">
+   <!-- <div class="container">
         <div class="card-deck">
             
             <div class="card">
@@ -104,7 +104,7 @@
     
 </div>
 
-
+-->
 
 <div><br><br><br></div>
 <app-footer></app-footer>
