--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -36,11 +36,9 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4 text-right">
+        <div class="col-md-4">
             <div class="card">
                 <h3 style="text-align: center;">Order Summary</h3>
-            <hr>
-            
             
             <button class="btn btn-success" (click)="checkOut()" style="font-size: 10px;">PlaceOrder</button>
  
