--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-nav></app-nav>
-<div class="container">
     <flash-messages></flash-messages>
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
 
-</div>
