--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="bg">
-    <div class="container">
+    <div class="container-fluid">
         <ngb-carousel>
             <ng-template ngbSlide>
                 <img src="https://jq4i42xkvxi1pmiu513c24lx-wpengine.netdna-ssl.com/wp-content/uploads/2019/06/secondary-1024x307.jpg"
@@ -27,17 +27,17 @@
                 <div class="mencollection">
                     <h1 class="mencollection" style="text-align: center;">Men Collection</h1>
                 </div>
-                <div class="col-sm-12">
+                <div class="col-md-12 col-sm-12">
                   <a routerLink="men"><img src="https://updatedyou.com/wp-content/uploads/2018/10/mens.jpg" width="100%"></a>  
                 </div>
                 <br>
                 <div class="card-deck">
-                    <div class="card col-sm-6">
-                     <a routerLink="jackets"><img src="https://i.pinimg.com/564x/c5/b7/5e/c5b75e3eeec8c0e69216f19fb146ffec.jpg" height="500px"></a>   
+                    <div class="card col-md-6 col-sm-6">
+                     <a routerLink="jackets"><img src="https://i.pinimg.com/564x/c5/b7/5e/c5b75e3eeec8c0e69216f19fb146ffec.jpg" height="500" ></a>   
                     </div>
-                    <div class="card col-sm-6">
+                    <div class="card col-md-6 col-sm-6">
                        <a routerLink="/menaccessories"><img src="https://image.freepik.com/free-vector/fashion-man-accessories-collection_1284-16522.jpg"
-                        height="500px"></a> 
+                        height="500" width="450"></a> 
                     </div>
                 </div>
             </div>
@@ -49,25 +49,22 @@
                 <div class="womencollection">
                     <h1 class="womencollection" style="text-align: center;">Women Collection</h1>
                 </div>
-                <div class="col-sm-12">
+                <div class="col-md-12 col-sm-12">
                   <a routerLink="women"><img src="https://images-eu.ssl-images-amazon.com/images/G/31/img18/apparel/WRS2018/WA/vday/3VDAY-PC-1024x300._CB455114849_.jpg"
                     width="100%"></a>  
                 </div>
                 <br>
                 <div class="card-deck">
-                    <div class="card col-sm-6">
+                    <div class="card col-md-6 col-sm-6">
                         <a routerLink="blouses"><img src="https://i.pinimg.com/originals/71/0d/e8/710de85b0df37682718c36acb6a5b0bc.jpg"
-                            height="500px"></a>       
+                            height="500"></a>       
                                 </div>
-                    <div class="card col-sm-6">
-                      <a routerLink="womenaccessories"> <img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24223636.jpg" height="500px"></a> 
+                    <div class="card col-md-6 col-sm-6">
+                      <a routerLink="womenaccessories"> <img src="https://d2gg9evh47fn9z.cloudfront.net/800px_COLOURBOX24223636.jpg" height="500"></a> 
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="spacer">
+    </div>
     
-    </div>
-    </div>
-    <app-footer></app-footer>
