--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -50,9 +50,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"  routerLink="cart">
-            <i class="fas fa-shopping-bag"></i>
-          </a>
+        
+         <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show"  routerLink="cart"> <mat-icon [matBadge]="cartItems.length" matBadgeColor="accent">shopping_bag</mat-icon></a>
         </li>
         <li class="nav-item dropdown" id="nav-link">
           <a *ngIf="!authservice.isAuthenticated"  class="nav-link">
@@ -70,7 +69,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" *ngIf="authservice.isAuthenticated" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="profile">Profile</a>
-            <a class="dropdown-item" *ngIf="authservice.isAuthenticated" data-toggle="collapse" data-target=".navbar-collapse.show" (click)="authservice.logout()">Logout</a>
+            <a class="dropdown-item btn btn-primary" *ngIf="authservice.isAuthenticated" data-toggle="collapse" data-target=".navbar-collapse.show" (click)="authservice.logout()">Logout</a>
           </div>
         </li>
 
